@@ -22,8 +22,8 @@ build-stamp: setup.py
 	cd tests && ./test_debtags.py
 	cd tests && ./test_changelog.py
 
-	python debian_bundle/debian_support.py
-	debian_bundle/doc-debtags > README.debtags
+	python lib/debian/debian_support.py
+	lib/debian/doc-debtags > README.debtags
 
 	touch $@
 
