@@ -1,6 +1,6 @@
 import sys
 print >> sys.stderr, "WARNING:",    \
         "the 'deb822' top-level module is *DEPRECATED*,",   \
-        "please use 'debian_bundle.deb822'"
+        "please use 'debian.deb822'"
 
-from debian_bundle.deb822 import *
+from debian.deb822 import *
