@@ -22,7 +22,8 @@ setup(name='python-debian',
       version='__CHANGELOG_VERSION__',
       description='Debian package related modules',
       url='http://packages.debian.org/sid/python-debian',
-      packages=['debian_bundle'],
+      package_dir={'': 'lib'},
+      packages=['debian', 'debian_bundle'],
       py_modules=['deb822'],
       maintainer='Debian python-debian Maintainers',
       maintainer_email='pkg-python-debian-maint@lists.alioth.debian.org',
