@@ -26,7 +26,7 @@
 import sys
 import unittest
 
-sys.path.insert(0, '../debian_bundle/')
+sys.path.insert(0, '../lib/debian/')
 
 import changelog
 
