@@ -23,7 +23,7 @@ import sys
 import unittest
 from StringIO import StringIO
 
-sys.path.insert(0, '../debian_bundle/')
+sys.path.insert(0, '../lib/debian/')
 
 import deb822
 
